# algo-battle

./: Cargo.toml  README.md
.github/workflows/: deploy.yml
backend/: Cargo.toml
backend/src/: main.rs  routes.rs  service.rs
backend/src/routes/: boilerplater_code.rs  contest.rs  judge0_submission.rs  leaderboard.rs  mod.rs  question.rs  submission.rs  user.rs
common/: Cargo.toml
common/src/: lib.rs
common/src/auth/: claims.rs  extractor.rs  jwt_claims.rs  mod.rs  ws_extractor.rs
common/src/types/: db.rs  mod.rs  routes.rs  ws.rs
db/: Cargo.toml
db/.sqlx/: query-08de6a801f64f2ae3f37f6773da7afec908cea81452f387d3e3463b99cfe3686.json  query-0f4847811d321a503ec88fbd3861222520c14d629a5c424eacb1b77f2aec79dc.json  query-4773cc8d213872e20235c20df9f4c6c0b8bd89b36ddb28c0a2d80b6b9411fd2f.json  query-57655c06b5772c1bc1337c861cf1929bc45d0e2f1db1097d3b36e4e05ea0b6f8.json  query-5934aa98b384b98a1cebfafc96e0eaf21d80b0b79b6731975bd4d389b3f26d8f.json  query-64ca815ac7166e69c35c657681e233bf12af28ede15c5ac43e6907adc4cc1973.json  query-72e73324ab98218e149d8a664a4caa449204df9230fa097df7c17fd2dc4215b7.json
db/migrations/: 20260111202345_create_user.down.sql  20260111202345_create_user.up.sql  20260111203440_create_question.down.sql  20260111203440_create_question.up.sql  20260111203901_create_contest.down.sql  20260111203901_create_contest.up.sql  20260111204502_create_contest_question_join.down.sql  20260111204502_create_contest_question_join.up.sql  20260117164702_create_contest_attempt.down.sql  20260117164702_create_contest_attempt.up.sql  20260127201241_create_leaderboard.down.sql  20260127201241_create_leaderboard.up.sql  20260207130137_create_dsa_problem.down.sql  20260207130137_create_dsa_problem.up.sql  20260207130650_create_boilerplate_code.down.sql  20260207130650_create_boilerplate_code.up.sql  20260207131332_create_testcases.down.sql  20260207131332_create_testcases.up.sql  20260207131541_create_judge0_submissions.down.sql  20260207131541_create_judge0_submissions.up.sql  20260207131541_create_submissions.up.sql  20260207152123_create_mcq_question.down.sql  20260207152123_create_mcq_question.up.sql  20260221112032_create_question_submission.down.sql  20260221112032_create_question_submission.up.sql
db/src/: lib.rs
frontend/: package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: Appbar.tsx  ContestInfo.tsx  ContestInfoList.tsx  QuestionInfo.tsx  QuestionInfoList.tsx
frontend/store/: atom.ts
leaderboard/: Cargo.toml
question-bank/: Cargo.toml
question-bank/questions/twosum/: Problem.md  Structure.md
question-bank/questions/twosum/full/: twosum_full.cpp  twosum_full.js  twosum_full.rs
question-bank/questions/twosum/input/: 2.txt  3.txt  4.txt
question-bank/questions/twosum/partial/: twosum.cpp  twosum.js  twosum.rs
question-bank/src/: main.rs  question_generator.rs
redis-service/: Cargo.toml
ws/: Cargo.toml
ws/src/: contest_manager.rs  main.rs  service.rs  utils.rs
(+33 files in other folders)
