[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
db = {path = "../db"}
common = {path = "../common"}

actix-cors = "0.7.1"
actix-web = "4.12.1"
serde = {version = "1.0.228", features = ["derive"]}
serde_json = "1.0.145"
sqlx = {version = "0.8.6", features = ["postgres", "runtime-tokio", "uuid", "tls-native-tls", "json"]}
tokio = "1.48.0"
anyhow = "1.0.100"
page-hunter = { version = "0.6.0", features = ["serde"] }
