[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
db = {path = "../db"}
redis-service = {path = "../redis-service"}
common = {path = "../common"}
leaderboard = {path = "../leaderboard"}

actix-cors = "0.7.1"
actix-web = "4.12.1"
serde = {version = "1.0.228", features = ["derive"]}
serde_json = "1.0.145"
sqlx = {version = "0.8.6", features = ["postgres", "runtime-tokio", "uuid", "tls-native-tls", "json"]}
tokio = "1.48.0"
anyhow = "1.0.100"
page-hunter = { version = "0.6.0", features = ["serde"] }
jsonwebtoken = "10.2.0"
bcrypt = "0.18.0"
tokio-tungstenite = "0.21"
url = "2"
futures-util = "0.3"
chrono = "0.4.43"
