[package]
name = "db"
version = "0.1.0"
edition = "2024"

[dependencies]
common = {path = "../common"}

anyhow = "1.0.100"
dotenv = "0.15.0"
serde = {version = "1.0.228", features = ["derive"]}
serde_json = "1.0.145"
sqlx = {version = "0.8.6", features = ["postgres", "runtime-tokio", "uuid", "tls-native-tls", "json"]}
tokio = "1.48.0"
