[package]
name = "question-bank"
version = "0.1.0"
edition = "2024"

[dependencies]
db = {path = "../db"}
common = {path = "../common"}

serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
anyhow = "1.0.100"
once_cell = "1.21.3"
indoc = "2.0.7"
clap = { version = "4.5.57", features = ["derive"] }
tokio = { version = "1.48.0", features = ["full"] }