[package]
name = "ws"
version = "0.1.0"
edition = "2024"

[dependencies]
common = {path = "../common"}
db = {path = "../db"}
redis-service = {path = "../redis-service"}
leaderboard = {path = "../leaderboard"}

actix-web = "4.12.1"
actix-ws = "0.3.1"
tokio = { version = "1.48.0", features = ["full"] }
serde_json = "1.0.145"
serde = "1.0.228"
uuid = "1.19.0"
anyhow = "1.0.100"
dotenv = "0.15.0"
sqlx = {version = "0.8.6", features = ["postgres", "runtime-tokio", "uuid", "tls-native-tls", "json"]}
chrono = "0.4.43"
